2007-08-15  Karl Runge <runge@karlrunge.com>
	* x11vnc: add reverse -connect support to -display WAIT:
	  i.e. -find, -create, -svc, ... mode.  Document need for
	  -shared under -connect host1,host2,...  Fix bug in -display
	  WAIT: mode if vnc client tries to only retrieve SSL cert.

2007-08-03  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -xrefresh option, fix KDE .DCOPserver parse bug,
	  make sure UNIXPW_DISABLE_LOCALHOST/-unixpw_unsafe ignore
	  any SSH tunnel that would imply -localhost.

2007-07-04  Karl Runge <runge@karlrunge.com>
	* x11vnc: -debug_ncache, fix big fonts in tkx11vnc.

2007-06-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: add detectors if ultravnc chat or file xfer took place,
	  if so ping clients more frequently.  Fix compile bug if libssl
	  not available.
	* ssvnc: add ultravnc ftp jar feature. Add certificate management
	  "Verify All Certs".

2007-05-26  Karl Runge <runge@karlrunge.com>
	* x11vnc: set to version 0.9.2, back to NCACHE -12 for testing.
	  in -unixpw, initial Escape means no echo username (see ssvnc).

2007-05-21  Karl Runge <runge@karlrunge.com>
	* x11vnc: set things up (NCACHE = -1) to not have -ncache
	  on by default; just give a blurb about it.

2007-05-16  Karl Runge <runge@karlrunge.com>
	* x11vnc: print out peer host and port for debugging SSL. 
	* ssvnc: rand check, SOCKS support, PORT=, Verify all Certs
	  and accepted certs logging.

2007-05-06  Karl Runge <runge@karlrunge.com>
	* x11vnc: lower -wait and -defer to 20ms.  Change some SSL
	  debug output.  Drop client doing ultravnc stuff in -unixpw
	  during login phase.

2007-05-05  Karl Runge <runge@karlrunge.com>
	* x11vnc: add groups handling for -users mode.

2007-05-01  Karl Runge <runge@karlrunge.com>
	* ssl: update to java viewer and utility scripts (add onetimekey).
	* x11vnc: setsid() for -gone mode. setpgrp for -create script and
	  add -cc 4 to avoid DirectColor.

2007-04-28  Karl Runge <runge@karlrunge.com>