@@ -834,14 +834,15 @@ void print_help(int mode) {
 "                       your long \"login:\" line press the Up arrow once\n"
 "                       (before typing anything else).\n"
 "\n"
-"                       Another option is \"geom=WxH\" or \"geom=WxHxD\"\n"
-"                       (or ge=). This only has an effect in FINDCREATEDISPLAY\n"
-"                       mode when a virtual X server such as Xvfb is going to\n"
-"                       be created.  It sets the width and height of the new\n"
-"                       display, and optionally the color depth as well. You\n"
-"                       can also supply \"kde\", \"gnome\", \"fvwm\", \"twm\",\n"
-"                       or \"failsafe\" to have the created display use that\n"
-"                       mode for the user session.\n"
+"                       Another option is \"geom=WxH\" or \"geom=WxHxD\" (or\n"
+"                       ge=). This only has an effect in FINDCREATEDISPLAY\n"
+"                       mode when a virtual X server such as Xvfb is going\n"
+"                       to be created.  It sets the width and height of\n"
+"                       the new display, and optionally the color depth as\n"
+"                       well. You can also supply \"gnome\", \"kde\", \"twm\",\n"
+"                       \"fvwm\", \"mwm\", \"dtwm\", \"wmaker\", \"Xsession\",\n"
+"                       or \"failsafe\" (same as \"xterm\") to have the created\n"
+"                       display use that mode for the user session.\n"
 "\n"
 "                       To disable the option setting set the environment\n"
 "                       variable X11VNC_NO_UNIXPW_OPTS=1 before starting x11vnc.\n"
@@ -937,14 +938,18 @@ void print_help(int mode) {
 "                       e.g., WAIT:cmd=FINDCREATEDISPLAY-Xdummy,Xvfb,X  and/or\n"
 "                       leave out ones you do not want.  The the extra case\n"
 "                       \"X\" means try to start up a real, hardware X server\n"
-"                       using xinit(1) or startx(1).  If there is already an\n"
-"                       X server running the X case may only work on Linux\n"
-"                       (see startx(1)).\n"
+"                       using xinit(1) or startx(1).  \"Xvnc\" also works.  If\n"
+"                       there is already an X server running the X case may\n"
+"                       only work on Linux (see startx(1)).\n"
 "\n"
 "                       You can set the environment variable FD_GEOM (or\n"
 "                       X11VNC_CREATE_GEOM) to WxH or WxHxD to set the width\n"
 "                       and height and optionally the color depth of the\n"
-"                       created display.\n"
+"                       created display.  You can also set FD_SESS to be the\n"
+"                       session (short name of the windowmanager: kde, gnome,\n"
+"                       twm, failsafe), and FD_OPTS as extra options to pass\n"
+"                       to the created X server. You can also set FD_PROG to\n"
+"                       be the full path to the session/windowmanager program.\n"
 "\n"
 "                       If you want the FINDCREATEDISPLAY session to contact an\n"
 "                       XDMCP login manager (xdm/gdm/kdm) on the same machine,\n"
